@@ -1007,6 +1007,9 @@ GUI_MATCHWINDOW_SUBWINDOWTITLE_Fuzzy_Matches=Fuzzy Matches
 
 GUI_MATCHWINDOW_SUBWINDOWTITLE_Glossary=Glossary
 
+# 0 - filename
+GUI_SUBWINDOWTITLE_Editor=Editor - {0}
+
 DOCKING_HINT_DOCK=Dock
 
 DOCKING_HINT_MINIMIZE=Minimize
